change go vet to go run .

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
         run: |
           go mod download
 
-      - name: Run go vet
-        run: go vet ./...
+      - name: Run application (go run)
+        run: go run .
 
       - name: Run tests
         run: go test -v ./...
